--- a/Client/OrleansPoC.UI/OrleansPoC.UI/Views/MainView.axaml
+++ b/Client/OrleansPoC.UI/OrleansPoC.UI/Views/MainView.axaml
@@ -12,7 +12,7 @@
         <vm:MainViewModel />
     </Design.DataContext>
 
-    <Grid RowDefinitions="40,40,*,50">
+    <Grid RowDefinitions="40,*,50">
 
         <TextBox Grid.Row="0"
                  Margin="5"
@@ -20,13 +20,7 @@
                  HorizontalAlignment="Stretch"
                  Text="{Binding Endpoint}" />
 
-        <TextBox Grid.Row="1"
-                 Margin="5"
-                 Watermark="Name"
-                 HorizontalAlignment="Stretch"
-                 Text="{Binding Name}" />
-
-        <ListBox Grid.Row="2"
+        <ListBox Grid.Row="1"
                  Margin="5"
                  HorizontalAlignment="Stretch"
                  ItemsSource="{Binding Stocks}">
@@ -39,13 +33,13 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <Button Grid.Row="3"
+        <Button Grid.Row="2"
                 Margin="5"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Stretch"
                 HorizontalContentAlignment="Center"
                 VerticalContentAlignment="Center"
                 Content="Send"
-                Command="{Binding SendCommand}" />
+                Command="{Binding OpenBooksCommand}" />
     </Grid>
 </UserControl>
