--- a/Client/OrleansPoC.UI/OrleansPoC.UI/Views/MainWindow.axaml
+++ b/Client/OrleansPoC.UI/OrleansPoC.UI/Views/MainWindow.axaml
@@ -1,6 +1,5 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:OrleansPoC.UI.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:OrleansPoC.UI.Views"
@@ -8,8 +7,7 @@
         x:Class="OrleansPoC.UI.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="OrleansPoC"
-        MaxHeight="600" 
-        MaxWidth="450"
-        >
-        <views:MainView />
+        MaxHeight="600"
+        MaxWidth="450">
+    <views:MainView />
 </Window>
